# charla-api-credimorar

./: .gitignore  Dockerfile  README.md  app.py  bradesco_extraction.csv  extraction.xlsx  main.py  pyproject.toml  sandox.ipynb
data/textract/: analyzeDocResponse.json  extraction.xlsx  keyValues.csv  rawText.txt
document_processor/: document_processor.py
llm/: llm.py
pdf_parsing/: checkbox_detector.py  ocr_pipeline.py
prompt/: prompts.toml
structured_output/: output_models.py
