[project]
name = "charla-api-extraction-imob-fin"
version = "0.1.0"
description = "Projeto para extração e tabulação de dados de propostas de financiamento imobiliário."
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "docling>=2.18.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pydantic-ai[logfire]>=0.0.22",
    "pymupdf>=1.25.3",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
